--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -59,7 +59,7 @@
     <meta name="image" property="og:image" content="https://velocitaracing.github.io/covid-19/OG.png" />
 
     <meta property="og:title" content="Covid-19 Help Links | Karnataka | Bangalore" />
-    <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:url" content="https://velocitaracing.github.io/covid-19" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together!" />
     <meta property="og:image" content="https://velocitaracing.github.io/covid-19/1.webp" />
