--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -71,7 +71,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Covid-19 Help Links | Karnataka | Bangalore" />
-    <meta name="twitter:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together!" />
+    <meta name="twitter:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together! Find covid-19 helpful links on this page." />
     <meta name="twitter:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
 
 
