--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -72,7 +72,7 @@
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Covid-19 Help Links | Karnataka | Bangalore" />
     <meta name="twitter:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together! Find covid-19 helpful links on this page." />
-    <meta name="twitter:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
+    <meta name="twitter:image" content="https://velocitaracing.github.io/covid-19/1.webp" />
 
 
     <link rel="stylesheet" href="../CSS/loader.css">
