--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -553,7 +553,7 @@
 
 
     <script src="../JS/loader.js"></script>
-    <script src="./backscroll.js"></script>
+    <script src="./backScroll.js"></script>
     <script src="./smoothScroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
