--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -332,13 +332,13 @@
                 </div>
                 
                 <div class="how-to-text">
-                    <img src="./Asset 3.png" alt="">
-                    <img src="./Asset 4.png" alt="">
-                    <img src="./Asset 5.png" alt="">
-                    <img src="./Asset 6.png" alt="">
-                    <img src="./Asset 7.png" alt="">
-                    <img src="./Asset 8.png" alt="">
-                    <img src="./Asset 9.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 3.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 4.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 5.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 6.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 7.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 8.png" alt="">
+                    <img data-aos="zoom-in" src="./Asset 9.png" alt="">
                 </div>           
             </div>
         </div>
