--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -315,6 +315,20 @@
                 </div>
                 <a target="_blank" href="https://covid19.karnataka.gov.in/storage/pdf-files/Training-CapacityBuilding/Pvt%20Labs.pdf" class="linkSecondaryButton secondary-dark-button">VIEW</a>
                </div> 
+
+               <div data-aos="zoom-in" class="card">
+                <div class="card-text">
+                   COVID-19 Test Results KAR
+                </div>
+                <a target="_blank" href="https://www.covidwar.karnataka.gov.in/service1" class="linkSecondaryButton secondary-dark-button">VIEW</a>
+               </div>
+
+               <div data-aos="zoom-in" class="card">
+                <div class="card-text">
+                   ICMR Covid 19 Test Results
+                </div>
+                <a target="_blank" href="https://covid19cc.nic.in/icmr/Citizen/TestSampleReport.aspx" class="linkSecondaryButton secondary-dark-button">VIEW</a>
+               </div>
             </div>
         </div>        
     </section>
