--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -171,15 +171,18 @@
     </div>
 
 
-    <section id="home" class="career-home">
+    <section id="home" class="career-home"> / 97456-97456
 
             <div id="career-heading-new" class="heading">
-                <!-- <div class="blue-box">
+                <div class="blue-box">
                     <div class="underline"></div>
                     <p class="underline-heading">UPDATE</p>
-                    <p class="content">Interested in Graphic Designing?<br>Check out open positions now!</p>
-                    <button class="secondaryButton career-news-button">APPLY NOW</button>
-                </div> -->
+                    <p class="content-two"><br>Medical Helpline</p>
+                    <a href="tel:104" class="linkSecondaryButton career-news-button-two">104</a>
+                    <a href="tel:97456 97456" class="linkSecondaryButton career-news-button-three">97456 97456</a>
+                    <p class="content"><br>Dasoha Food Helpline</p>
+                    <a href="tel:155214" class="linkSecondaryButton career-news-button">155214</a>
+                </div>
                 
                 <div class="cover-1">
                     <h2>Let's fight this Together!</h2>
@@ -268,7 +271,7 @@
                 <div class="card-text">
                     Covid-19 Dashboard KAR
                 </div>
-                <a target="_blank" href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" class="linkSecondaryButton secondary-dark-button">VIEW</a>
+                <a target="_blank" href="https://covid19.karnataka.gov.in/english" class="linkSecondaryButton secondary-dark-button">VIEW</a>
             </div>
         </div>
 
