--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -449,7 +449,7 @@
     <section id="how-to-fight" class="how">
         <div class="container">
             <div class="how-to-heading">
-                <h2>Dont worry!<br> You aren't alone, we're fighting this together!</h2>
+                <h2>Don't worry!<br> You aren't alone, we're fighting this together!</h2>
                 <p>Everything will be alright!</p>
             </div>
             <div class="how-to-container">
