--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -178,10 +178,10 @@
                     <div class="underline"></div>
                     <p class="underline-heading">UPDATE</p>
                     <p class="content-two"><br>Medical Helpline</p>
-                    <a href="tel:104" class="linkSecondaryButton career-news-button-two">104</a>
-                    <a href="tel:97456 97456" class="linkSecondaryButton career-news-button-three">97456 97456</a>
+                    <a href="tel:104" class="linkSecondaryButton background-trans career-news-button-two">104</a>
+                    <a href="tel:97456 97456" class="linkSecondaryButton background-trans career-news-button-three">97456 97456</a>
                     <p class="content"><br>Dasoha Food Helpline</p>
-                    <a href="tel:155214" class="linkSecondaryButton career-news-button">155214</a>
+                    <a href="tel:155214" class="linkSecondaryButton background-trans career-news-button">155214</a>
                 </div>
                 
                 <div class="cover-1">
