--- a/covid-19/oxygen/index.html
+++ b/covid-19/oxygen/index.html
@@ -254,7 +254,7 @@
 
     <script src="./oxy.js"></script>
     <script src="../../JS/loader.js"></script>
-    <script src="../backscroll.js"></script>
+    <!-- <script src="../backScroll.js"></script> -->
     <script src="../smoothScroll.js"></script>
     <script src="../../JS/mobnav.js"></script>
     <script src="../../JS/ripple.js"></script>
