--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WH763T6');</script>
+    <!-- End Google Tag Manager -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7VZCRNZYPE"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7VZCRNZYPE');
+    </script>
     <meta name="description" content="Unite against covid19, we join in to fight together! Velocita Racing's take on covid-19 | Find covid 19 important links here, we've tried best to bring the links to one place. #stayhome #staysafe #fightforcorona" > 
     <meta name="keywords" content="Covid 19 links, covid 19 contacts, covid 19 karnataka, covid 19 bangalore, covid-19, corona virus, corona virus links, unite against covid, together, fight covid-19, india covid 19, bangalore covid 19, bangalore corona virus, karnataka corona helplines, karnataka covid19 helplines, velocita racing, covid-19, fsae team, velocitaracing, Velocita, velocitaracing careers, velocita racing careers, velocita racing careers, careers at velocita racing, careers, velocita racing departments, velocita racing sub systems, velocitaracing technical, velocita racing website, Velocita blog, Ramaiah blog, velocita website, velocita racing website, blogs, Racing, Bangalore, Bengaluru, Racing blog, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department" >
     <title>Covid 19 | Velocita Racing</title>
@@ -86,6 +102,10 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH763T6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div id="preloader">
         <div id="status">&nbsp;</div>
