--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -78,7 +78,7 @@
     <meta property="og:url" content="https://velocitaracing.github.io/covid-19" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together!" />
-    <meta property="og:image" content="https://velocitaracing.github.io/covid-19/1.webp" />
+    <meta property="og:image" content="https://velocitaracing.github.io/covid-19/OG.png" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
 
@@ -88,7 +88,7 @@
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Covid-19 Help Links | Karnataka | Bangalore" />
     <meta name="twitter:description" content="#UnitedAgainstCovid, Velocita Racing takes on covid-19. Let's Fight this together! Find covid-19 helpful links on this page." />
-    <meta name="twitter:image" content="https://velocitaracing.github.io/covid-19/1.webp" />
+    <meta name="twitter:image" content="https://velocitaracing.github.io/covid-19/OG.png" />
 
 
     <link rel="stylesheet" href="../CSS/loader.css">
